--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="navbar">
            
                 <a class ='option' href="./html/work"><p>Work <span class="bar"></span></p></a>
-                <a class ='option' href="./html/about.html"><p>About <span class="bar"></span></p></a>
-                <a class ='option' href="./html/contact.html"><p>Contact <span class="bar"></span></p></a>
+                <a class ='option' href="./html/about"><p>About <span class="bar"></span></p></a>
+                <a class ='option' href="./html/contact"><p>Contact <span class="bar"></span></p></a>
                 <a class ='option-mobile' href=""><p>Menu <span class="bar"></span></p></a>
 
         </div>
@@ -48,9 +48,9 @@
         <!--Mobile tab-->    
         <div class="navbar-mobile">
            <div class="flex-container">
-                <a class ='option' href="./html/work.html"><p>WORK <span class="bar"></span></p></a>
-                <a class ='option' href="./html/about.html"><p>ABOUT <span class="bar"></span></p></a>
-                <a class ='option' href="./html/contact.html"><p>CONTACT <span class="bar"></span></p></a>
+                <a class ='option' href="./html/work"><p>WORK <span class="bar"></span></p></a>
+                <a class ='option' href="./html/about"><p>ABOUT <span class="bar"></span></p></a>
+                <a class ='option' href="./html/contact"><p>CONTACT <span class="bar"></span></p></a>
                 <span id="close-tab">X</span>
                 <div class="background-image"></div>
             </div>
