--- a/html/work.html
+++ b/html/work.html
@@ -25,9 +25,9 @@
 
         <div class="navbar">
            
-                <a class ='option' href="./work.html"><p>Work <span class="bar"></span></p></a>
-                <a class ='option' href="./about.html"><p>About <span class="bar"></span></p></a>
-                <a class ='option' href="./contact.html"><p>Contact <span class="bar"></span></p></a>
+                <a class ='option' href="./work"><p>Work <span class="bar"></span></p></a>
+                <a class ='option' href="./about"><p>About <span class="bar"></span></p></a>
+                <a class ='option' href="./contact"><p>Contact <span class="bar"></span></p></a>
                 <a class ='option-mobile' href=""><p>Menu <span class="bar"></span></p></a>
 
         </div>
@@ -35,9 +35,9 @@
         <!--Mobile tab-->    
         <div class="navbar-mobile">
            <div class="flex-container">
-                <a class ='option' href="./work.html"><p>WORK <span class="bar"></span></p></a>
-                <a class ='option' href="./about.html"><p>ABOUT <span class="bar"></span></p></a>
-                <a class ='option' href="./contact.html"><p>CONTACT <span class="bar"></span></p></a>
+                <a class ='option' href="./work"><p>WORK <span class="bar"></span></p></a>
+                <a class ='option' href="./about"><p>ABOUT <span class="bar"></span></p></a>
+                <a class ='option' href="./contact"><p>CONTACT <span class="bar"></span></p></a>
                 <span id="close-tab">X</span>
                 <div class="background-image"></div>
             </div>
