--- a/html/work.html
+++ b/html/work.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
     <title>Alex Dima | Work</title>
@@ -217,8 +218,8 @@
                         <div class="icons">
                             
                             <a href=""><img src="../images/facebook.png" alt=""></a>
-                            <a href=""><img src="../images/linkedin.png" alt=""></a>
-                            <a href=""><img src="../images/github.png" alt=""></a>
+                            <a href="https://www.linkedin.com/in/dimulescu-alexandru/"><img src="../images/linkedin.png" alt=""></a>
+                            <a href="https://github.com/AlexDima02"><img src="../images/github.png" alt=""></a>
 
 
                         </div>
