--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     </div>
 
                     <div class="form-table">
-                        <form action="https://formsubmit.co/8486bf79db0dbe1e9a21a0523ebd7424" method="post">
+                        <form action="https://formsubmit.co/dimulescualexandru02@gmail.com" method="post">
                             
                             <!-- Add a reCaptcha for the spammers -->
                             <input type="text" name="_honey" style="display:none">
