--- a/html/about.html
+++ b/html/about.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="big-picture">
                             
-                            <img src='../images/personal-photo.JPG' class="image image-reveal"></img>
+                            <img src='../images/presentation-photo.jpg' class="image image-reveal"></img>
                         
                         </div>
 
