--- a/html/contact.html
+++ b/html/contact.html
@@ -113,7 +113,7 @@
                         </div>
                             
                             <!-- Redirect to a thank you custom page -->
-                            <input type="hidden" name="_next" value="https://alex-dima-portfolio.netlify.app/form.html"> 
+                            <input type="hidden" name="_next" value="https://alex-dima-portfolio.netlify.app/html/form.html"> 
 
                             <div class="message-container">
 
