Update Project repair + link

--- a/html/work.html
+++ b/html/work.html
@@ -53,7 +53,7 @@
                 <div class="showcase-container_header">
                     <div class="info">
                         <span class="info-logo">Case Study</span>
-                        <a class="project-link" href="">Visit live link <span class="bar"></span></a>
+                        <a id="project-link" href="">Visit live link <span class="bar"></span></a>
                         <span class="info-name"></span>
                     </div>
 
@@ -65,7 +65,7 @@
                     
                     <div class="big-description">
                         <p></p>
-                        <a class="project-link-mobile" href="">Visit live link <span class="bar"></span></a>
+                        <a id="project-link-mobile" href="">Visit live link <span class="bar"></span></a>
 
                         <div class="project-info">
                             <div class="info-containers">
