--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
     <title>Alex Dima | Home</title>
 
 </head>
@@ -66,7 +67,7 @@
                 <div class="showcase-container_header">
                     <div class="info">
                         <span class="info-logo">Case Study</span>
-                        <a class="project-link" href="">Visit live link <span class="bar"></span></a>
+                        <a id="project-link" href="">Visit live link <span class="bar"></span></a>
                         <span class="info-name"></span>
                     </div>
 
@@ -78,7 +79,7 @@
                     
                     <div class="big-description">
                         <p></p>
-                        <a class="project-link-mobile" href="">Visit live link <span class="bar"></span></a>
+                        <a id="project-link-mobile" href="">Visit live link <span class="bar"></span></a>
 
                         <div class="project-info">
                             <div class="info-containers">
@@ -99,7 +100,7 @@
 
                     </div>
 
-                    <div class="project-photos">
+                    <div class="project-photos active">
 
                         <div class="photo"><img id="photo-image" src="" alt=""></div>
                         <div class="photo"><img id="photo-image" src="" alt=""></div>
@@ -111,13 +112,13 @@
 
                     </div>
 
-                    <div class="project-photos-mobile">
+                    <div class="project-photos-mobile active">
 
-                        <div class="photo"><img id="photo-image" src="../images/project3.jpg" alt=""></div>
-                        <div class="photo"><img id="photo-image" src="../images/project3.jpg" alt=""></div>
-                        <div class="photo"><img id="photo-image" src="../images/project3.jpg" alt=""></div>
-                        <div class="photo"><img id="photo-image" src="../images/project3.jpg" alt=""></div>
-                        <div class="photo"><img id="photo-image" src="../images/project3.jpg" alt=""></div>
+                        <div class="photo"><img id="photo-image" src="" alt=""></div>
+                        <div class="photo"><img id="photo-image" src="" alt=""></div>
+                        <div class="photo"><img id="photo-image" src="" alt=""></div>
+                        <div class="photo"><img id="photo-image" src="" alt=""></div>
+                        <div class="photo"><img id="photo-image" src="" alt=""></div>
                         
 
 
