--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
                 <div class="image-personal">
 
-                   <img src="./images/personal-photo.JPG" alt="">
+                   <img src="./images/profile-photo.jpeg" alt="">
 
                 </div>
 
