Update Slider ready

--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
 
             <div class="project-container">
                 <div class="description-project">
-                    <a id="project1" class ="project-name" href=""><p>BEATMAKER <span class="bar headline"></span></p></a>
+                    <a id="project3" class ="project-name" href=""><p>Finance Web App<span class="bar headline"></span></p></a>
                     <div class="small-description">
 
-                        <p>Cute project using technologies like JavaScript, CSS and HTML.</p>
+                        <p>Budget tracking web app made with React JS and Dexie JS library.</p>
 
                     </div>
                 </div>
 
                 <div class="image-project">
 
-                    <img src="./images/image-project1/3.png" alt="">
+                    <img src="./images/project3.png" alt="">
 
                 </div>
 
@@ -221,21 +221,24 @@
             </div>
 
             <div class="project-container">
-                
                 <div class="description-project">
-                    <a id="project2" class ="project-name" href=""><p>Weather WebApp <span class="bar headline"></span></p></a>
+                    <a id="project4" class ="project-name" href=""><p>News Web App<span class="bar headline"></span></p></a>
                     <div class="small-description">
 
-                        <p>Useful project made with weather API and using technologies like Javascript, CSS and HTML.</p>
+                        <p>A news web app that can show you filtered news or all the news around the world in just a few clicks.</p>
 
                     </div>
                 </div>
 
                 <div class="image-project">
 
-                    <img src="./images/image-project2/2.png" alt="">
+                    <img src="./images/project4.png" alt="">
 
                 </div>
+
+
+
+
 
 
             </div>
@@ -410,7 +413,8 @@
 
     </footer>
     <script src="./js/app.js"></script>
-    <script type="module" src="./js/cursorType.js"></script>
+    <script type="module" src="./js/showcaseLessProjects.js"></script>
+    <!-- <script type="module" src="./js/cursorType.js"></script> -->
     <script type="module" src="./js/project-slider.js"></script>
     <script type="module" src="./js/menuMobile.js"></script>
 </body>
