Fixed 3D models and images

--- a/html/contact.html
+++ b/html/contact.html
@@ -48,11 +48,11 @@
      </header>
 
     <main>
-        <canvas id="contact-gl-model">
+        <div id="contact-gl-model">
 
 
 
-        </canvas>
+        </div>
 
         <section class="contact-slide">
             <div class="contact-container">
