--- a/html/work.html
+++ b/html/work.html
@@ -342,6 +342,7 @@
     </main>
     <script src="../js/work.js"></script>
     <script type="module" src="../js/menuMobile.js"></script>
+    <!-- <script type="module" src="../js/showcaseLessProjects.js"></script> -->
     <script type="module" src="../js/cursorType.js"></script>
     <script type="module" src="../js/project-slider.js"></script>
     <script type="module" src="../js/preLoader.js"></script>
