--- a/html/contact.html
+++ b/html/contact.html
@@ -27,7 +27,7 @@
          <div class="navbar">
             
                  <a class ='option' href="./work"><p>Work <span class="bar"></span></p></a>
-                 <a class ='option' href="./about"><p>About <span class="bar"></span></p></a>
+                 <a class ='option' href="../about"><p>About <span class="bar"></span></p></a>
                  <a class ='option' href="./contact"><p>Contact <span class="bar"></span></p></a>
                  <a class ='option-mobile' href=""><p>Menu <span class="bar"></span></p></a>
  
@@ -37,7 +37,7 @@
          <div class="navbar-mobile">
             <div class="flex-container">
                  <a class ='option' href="./work"><p>WORK <span class="bar"></span></p></a>
-                 <a class ='option' href="./about"><p>ABOUT <span class="bar"></span></p></a>
+                 <a class ='option' href="../about"><p>ABOUT <span class="bar"></span></p></a>
                  <a class ='option' href="./contact"><p>CONTACT <span class="bar"></span></p></a>
                  <span id="close-tab">X</span>
                  <div class="background-image"></div>
