--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         
                             <p class="text-description text-reveal">Curently I like to work with technologies like Javascript, React JS and Three JS library.</p>
                             <p class="text-description text-reveal">With my experience in UI and product engineering, I solve product problems and build appealing usable web experiences.</p>
-                            <a class ='btn text-reveal' href="./html/about"><p>More about me <span class="text-bar"></span></p></a>
+                            <a class ='btn text-reveal' href="./about"><p>More about me <span class="text-bar"></span></p></a>
                         
                         </div>
                     </div>
@@ -289,7 +289,7 @@
 
                     </div>
 
-                    <a class ='btn' href="./html/about"><p>More about me <span class="text-bar"></span></p></a>
+                    <a class ='btn' href="./about"><p>More about me <span class="text-bar"></span></p></a>
 
                 </div>
 
