--- a/about.html
+++ b/about.html
@@ -230,9 +230,9 @@
                 
                 <div class="interest-carousel">
 
-                    <p id="0" class="item">GAMING</p>
-                    <p id="1" class="item">WORKOUT</p>
-                    <p id="2" class="item">READING</p>
+                    <p id="0" class="item1 active">GAMING</p>
+                    <p id="1" class="item2">WORKOUT</p>
+                    <p id="2" class="item3">READING</p>
 
 
                 </div>
