--- a/about.html
+++ b/about.html
@@ -230,9 +230,9 @@
                 
                 <div class="interest-carousel">
 
-                    <p id="0" class="item1 active">GAMING</p>
-                    <p id="1" class="item2">WORKOUT</p>
-                    <p id="2" class="item3">READING</p>
+                    <a id="0" href="" class="item1 active">GAMING</a>
+                    <a id="1" href="" class="item2">WORKOUT</a>
+                    <a id="2" href="" class="item3">READING</a>
 
 
                 </div>
