--- a/about.html
+++ b/about.html
@@ -230,9 +230,9 @@
                 
                 <div class="interest-carousel">
 
-                    <a id="0" href="" class="item1 active">GAMING</a>
-                    <a id="1" href="" class="item2">WORKOUT</a>
-                    <a id="2" href="" class="item3">READING</a>
+                    <a id="0" href="" class="item1 desktop active">GAMING</a>
+                    <a id="1" href="" class="item2 desktop">WORKOUT</a>
+                    <a id="2" href="" class="item3 desktop">READING</a>
 
 
                 </div>
